# secure-messenger-backend

./: .env.example  .gitignore  README.md  client.py  messenger.db  pyproject.toml  requirements.txt  run.bat  test_messenger.db
gui/: api.py  app.js  app.py  index.html
server/: auth.py  broadcaster.py  config.py  crypto.py  errors.py  main.py  models.py  routes.py  schemas.py  services.py
tests/: test_app.py
