[project]
name = "secure-messenger-stage1"
version = "1.0.0"
description = "Secure Messenger Stage 1"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "Secure Messenger"}
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.29.0",
  "sqlalchemy==2.0.30",
  "bcrypt==4.2.1",
  "python-jose[cryptography]==3.3.0",
  "cryptography>=42.0.7",
  "sse-starlette==2.1.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "pytest==8.2.0",
  "pytest-asyncio==0.23.6",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# auto mode: every async test function is awaited automatically — no manual
# @pytest.mark.asyncio decorator needed on individual test functions.
asyncio_mode = "auto"
